2002-11-20  Mo DeJong  <mdejong@uncounted.org>

	* INSTALL.TXT: Inform users that GNU tools
	are required to build Source-Navigator.
	* configure: Regen.
	* configure.in: Require GNU flex and
	bison when building.
	* hyper/Makefile.am: Remove generated
	.c files as a results of 'make clean'.
	* hyper/Makefile.in: Regen.
	* parsers/assembly/ppc601-eabi/Makefile.am: Add
	missing backslash.
	* parsers/assembly/ppc601-eabi/Makefile.in: Regen.
	* parsers/m4/Makefile.am: Add missing backslash.
	* parsers/m4/Makefile.in: Regen.

2002-11-16  Mo DeJong  <mdejong@uncounted.org>

	* gui/editorpane.tcl (m3_post_menu_update):
	Invert undo menu state so that it is normal
	when the file has changed.
	* gui/multiview.tcl (edit_post): Make the
	state of the undo and redo menu items
	depend on the -file_changed option from
	the editor to match the implementation
	in the editor class.

2002-11-15  Mo DeJong  <mdejong@uncounted.org>

	* db/dbimp.c (check_running): Add declaration
	of kill function when compiling under Win32.
	Fix check_running comment since this method
	does not check for the process using a socket.
	Reverse order of arguments to kill.
	* db/dbutils.c (kill): Reverse order of
	arguments to Win32 version of kill so they
	match the Unix implementation.

2002-11-15  Mo DeJong  <mdejong@uncounted.org>

	* db/dbdump.c:
	* db/dbimp.c:
	* db/dbutils.c:
	* db/dbutils.h: 
	* hyper/dbsym.c:
	* hyper/sn.h:
	* hyper/sninit.c:
	* hyper/tkTreeTable.c:
	* hyper/win/winMain.c:
	* parsers/cpp/skeleton.c:
	* parsers/cpp/cpplib/macread.c:
	* snavigator/win/winCon.c:
	Fix compiler warnings by adding casts
	and consts where needed. Also init some
	variables that could have been used
	without an init. No functional changes.

2002-11-15  Mo DeJong  <mdejong@uncounted.org>

	* Makefile.in: Regen.
	* configure: Regen.
	* configure.in: Invoke AC_CANONICAL_HOST
	and AC_CHECK_TOOL so that cross compiling
	works correctly. Invoke AC_CONFIG_AUX_DIR
	so configure knows where to look for